# LucidCLI

./: .gitignore  CMakeLists.txt  clean.sh  compile.sh  run.sh
src/: Control.cpp  Control.h  LucidDB.cpp  LucidDB.h  main.cpp
